# pde_solvers

./: .clangd  .gdbinit  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Config.cmake.in  Install.md  LICENSE  README.md  compile_commands.json
documents/: feat-parallel-quickest.md  ident_isothermal_qsm_test_spec.md
documents/ident-isothermal-qsm/: TZ-pressure-etalon-validation.md
msvc/: pde_solvers.sln  research_pde_solvers.vcxproj  research_pde_solvers.vcxproj.filters  testing_pde_solvers.sln  testing_pde_solvers.vcxproj  testing_pde_solvers.vcxproj.filters
msvc_cmake/: readme.txt
pde_solvers/: pde_solvers.h  physical_constants.h  pipe.h  timeseries.h
pde_solvers/core/: custom_buffer.h  differential_equation.h  profile_structures.h  ring_buffer.h
pde_solvers/pipe/: heat_transfer.h  iso_nonbaro_impulse_pde.h  oil.h  pipe_advection_pde.h  pipe_advection_solver.h  pipe_condensate_pde.h  pipe_dynamic_soil.h  pipe_dynamic_soil_multizone.h  pipe_endogenous_structs.h  pipe_heat_computations.h  pipe_heat_pde.h  pipe_heat_struct.h  pipe_heat_util.h  pipe_hydraulic_computations.h  pipe_hydraulic_pde.h  pipe_hydraulic_struct.h  pipe_profile_uniform.h  pipe_profile_utils.h
pde_solvers/solvers/: diffusion_solver.h  godunov_solver.h  moc_solver.h  ode_solver.h  quick_solver.h
pde_solvers/tasks/: advection_task.h  condensate_pipe_task.h  endogenous_values.h  iso_nonbarotropic_pipe_task.h  isothermal_quasistatic_ident.h  isothermal_quasistatic_task.h  nonisothermal_quasistatic_ident.h  nonisothermal_quasistatic_task.h  nonisothermal_quasistatic_task_p.h  pipe_heat_task_util.h  pipe_solver_confident_advection.h  pipe_solver_interface.h
pde_solvers/tasks/extras/: mass_accounting_solvers.h  mass_calculation.h
pde_solvers/timeseries/: csv_helpers.h  csv_readers.h  synthetic_timeseries.h  timeseries_helpers.h  vector_timeseries.h
pipeline/pipeline_scripts/: Clang_test.sh  Doxyfile  build.sh  clangbuild.ps1  defining_branch.sh  doxygen_test.sh  gccbuild.sh  mingwbuild.ps1  tests_start.sh  unicode_check.sh
research/: graphs.m  graphs_time.m  part1.m  part2.m  part3.m  research_main.cpp
research/2023-10-courant-spatial-profile/: courant_spatial_profile.h
research/2023-12-diffusion-of-advection/: diffusion_of_advection.h  plot_CompareMOCAndUpstream.m  plot_CompareQuick.m  plot_CompareQuickestDiffusion.m  research.m
research/2024-02-quick-with-quasistationary-model/: profile_impact.py  quick_with_quasistationary_model.h  research_rho_and_Q_change.asv  research_rho_and_Q_change.m
research/2024-08-quasistationary-with-real-data/: quasistationary_with_real_data.h
research/2024-08-quasistationary-with-real-data/data/: coord_heights.csv  synthetic_pout.csv  t_in.csv  time_series.py
research/2024-10-ident-quasistatic-isothermal/: ident_quasistatic_isothermal.h
research/2025-01-ident-quasistatic-nonisothermal/: ident_quasistatic_nonisothermal.h  nonisothermal_quasistationary_with_real_data.h
research/2025-04-calc-mass-on-isothermal-quasistatic/: calc_mass_on_isothermal_quasistatic.h
research_out/QSM_models/IdentIsothermalQSM/: plot_ECDF.py  plot_HIST.py  plot_ident_history.py  stats.py
research_out/QSM_models/IsothermalQuasistaticModelWithRealData/: Example.py  plot_ECDF.py  plot_HIST.py  stats.py
research_out/QSM_models/NonisothermalQuasistaticModelWithRealData/: TempProfile_shukhov.py  plot_ECDF.py  plot_ECDF_sh.py
research_out/QSM_models/NonisothermalQuasistaticModelWithRealData_Pressure/: Example_p.py  plot_ECDF_pressure.py  plot_ECDF_test.py
research_out/QSM_models/OptimiseGaussNewton/: j_d.py  plot_ECDF.py  plot_HIST.py
research_out/QSM_models/RealPipeline/: Example.py  hist.py  plot_coord_heghts.py
research_out/data/: time_series.py
research_out/data/cold_lu/: rho_in.csv  t_in_nps.csv
research_out/qsmNonisoNoParties/: compare_temperature_timeseries.py
research_out/qsmNonisoNoParties.ColdLU_DynamicTemperature/: TempProfile_shukhov.py
testing/: test_advection_moc_solver.h  test_condensate_pipe.cpp  test_condensate_pipe.h  test_condensate_pipe_PP.h  test_condensate_pipe_PQ.h  test_create_pipe_profile.h  test_diffusion.h  test_iso_nonbaro_hydro.h  test_iso_nonbaro_hydro_improver.h  test_main.cpp  test_moc.h  test_quick.h  test_quick_conservativity.h  test_quickest_parallel_benchmarks.h  test_simple_moc.h  test_static_pipe_solver.h  test_synthetic_timeseries.h  test_timeseries.h  test_transport_moc_solver.h  test_viscosity.h
testing/extras/: test_mass_accounting.h
testing/use_case/: euler_PQ.h
testing/utils/: advection_solvers_helpers.h
testing_out/QUICK.UseCaseStepDensity/: output.csv  plotter.m
testing_out/UniformProfile.CompareResProfFromDiffSourceProf/: uniform_profiles.py
testing_out/UpstreamDifferencing.UseCaseStepDensity/: plotter.m
util/plotters/: get_duration.m  get_grid.m  get_group_limits.m  parse_csv_raw.m  plot_groups.m
